force-app/main/default/objects/Contact/fields/Assignment_Score__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Score__c</fullName>
    <label>Assignment Score</label>
    <summarizedField>Solution__c.Score__c</summarizedField>
    <summaryForeignKey>Solution__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>