force-app/main/default/objects/Contact/fields/Outstanding_Score__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Score__c</fullName>
    <formula>Assignment_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>