force-app/main/default/objects/Contact/fields/Passing_Credit_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Passing_Credit_Threshold__c</fullName>
    <defaultValue>$CustomMetadata.Defaults__mdt.StudentDefaults.DefaultCreditThreshold__c</defaultValue>
    <label>Passing Credit Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>