force-app/main/default/objects/Contact/recordTypes/Tutor.recordType-meta.xml
<RecordType>
    <fullName>Tutor</fullName>
    <active>true</active>
    <description>Use this to create a new Tutor.</description>
    <label>Tutor</label>
</RecordType>