force-app/main/default/objects/Contact/listViews/Students.listView-meta.xml
<ListView>
    <fullName>Students</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Assignment_Score__c</columns>
    <columns>All_Time_Course_Count__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Student</value>
    </filters>
    <label>Students</label>
</ListView>