force-app/main/default/objects/Contact/listViews/Tutors.listView-meta.xml
<ListView>
    <fullName>Tutors</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Years_of_experience__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Tutor</value>
    </filters>
    <label>Tutors</label>
</ListView>